# fastapi_library

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  database.py  main.py  pyproject.toml
models/: books.py
repositories/: books.py
routers/: books.py
schemas/: books.py
